ajuste d estilo en detalle de producto

--- a/app/css/core/components.styl
+++ b/app/css/core/components.styl
@@ -422,7 +422,7 @@
       padding 5px 20px
 .slider-small
   margin-top 30px
-  margin-bottom 30px
+  margin-bottom 0
 
 /* WIDTH 100% CAROUSEL HOME */
 .owl-theme-slider
