--- a/app/css/core/navs.styl
+++ b/app/css/core/navs.styl
@@ -4,7 +4,8 @@
 -------------------------*/
 
 .header
-  position initial
+  position absolute
+  width 100%
 .send-free-msj
   background-color optional
   padding 5px 0
