--- a/app/css/layout/responsive.styl
+++ b/app/css/layout/responsive.styl
@@ -154,6 +154,10 @@
       display none
   figure.snip1190 h2
     font-size 28px
+  #home 
+    .section-two
+      .col-6
+        padding 5px  
   #home .section-one, #home .section-two, #home .section-four, 
   #home .section-five, #home .section-six, #home .section-seven
     padding 30px 0
