--- a/app/css/base/variables.styl
+++ b/app/css/base/variables.styl
@@ -18,8 +18,8 @@ optional = #e72820
 breadcrumbClr = white
 shoppingCart = fontClr
 qtyCartClr = warning
-wSlider = 100% //width slidet home
-hSlider = 500px //slider for home height
+wSlider = cover //width slidet home
+hSlider = 417px //slider for home height
 hSmallSlider = 600px //slider for products or small slider height
 wSmallSlider = 100% //slider for products or small slider width
 hShopCart = 100px //shopcart image size height
@@ -27,7 +27,7 @@ wShopCart = 100% //shopcart image size width
 
 /* font style */
 font-size = 15px
-fontClr = #222
+fontClr = #555
 fontTitles = 'poppins', sans-serif
 /* color sections */
 mainColor = white //color of nav
