--- a/app/templates/partials/options-group.html
+++ b/app/templates/partials/options-group.html
@@ -1,17 +1,20 @@
+<hr>
 <div class="">
-    <div class="col-sm-8 no-padding" ng-repeat="option in Product.detail.metadata.groups | orderBy: 'level'">
-        <label ng-if="option.kind === 'size'">Talla</label>
-        <label ng-if="option.kind === 'color'">Color</label>
-        <label ng-if="option.kind === 'style'">Estilo</label>
-        <md-radio-group ng-model="Product.optionSelected[$index]" required name="size_{{$index}}" 
-                ng-change="Product.getProductFromGroup()" layout="row">
-            <md-radio-button ng-repeat="size in Product.detail.taxonomies | filter:option.kind"
-                             ng-value="size"
-                             aria-label="{{size.name}}" ng-class="{'color':'md-primary', 'size':'md-warn'}[option.kind]" flex="{{option.kind === 'size' ? 20 : 50}}">{{size.name}}
-            </md-radio-button>
-          </md-radio-group>
-          <div class="errors" ng-messages="FormQty['size_' + $index].$error">
-            <div ng-message="required"> <span class="text-danger">No olvides de seleccionar el color o talla.</span></div>
+    <div class="container no-padding" ng-repeat="option in Product.detail.metadata.groups | orderBy: 'level'" style="margin-bottom: 15px;">
+        <div class="">
+            <label ng-if="option.kind === 'size'"><strong>Elige la talla</strong></label>
+            <label ng-if="option.kind === 'color'"><strong>Elige el color</strong></label>
+            <label ng-if="option.kind === 'style'"><strong>Elige el estilo</strong></label>
+            <md-radio-group class="row" ng-style="{'margin':'0'}" ng-model="Product.optionSelected[$index]" required name="size_{{$index}}" 
+                    ng-change="Product.getProductFromGroup()" layout="row">
+                <md-radio-button class="col-sm-1" ng-repeat="size in Product.detail.taxonomies | filter:option.kind"
+                                ng-value="size"
+                                aria-label="{{size.name}}" ng-class="{'color':'md-primary', 'size':'md-warn'}[option.kind]" flex="{{option.kind === 'size' ? 20 : 50}}">{{size.name}}
+                </md-radio-button>
+            </md-radio-group>
+            <div class="errors" ng-messages="FormQty['size_' + $index].$error">
+                <div ng-message="required"> <small class="text-danger">Selecciona el color o talla.</small></div>
+            </div>
         </div>
     </div>
 <!--     <div class="col-sm-8 no-padding" ng-repeat="option in Product.detail.metadata.groups | orderBy: 'level'">
