fix layout home

--- a/app/css/layout/responsive.styl
+++ b/app/css/layout/responsive.styl
@@ -89,6 +89,14 @@
 /* Mobile Layout: 320px. */
 
 @media only screen and (max-width: 767px)
+  #home .slider-box 
+    .card
+      margin-bottom 0
+      .card-img-top 
+        height 170px  
+  .slider-box
+    .no-pd-l 
+      padding 15px !important
   .temp-product-detail 
     .article-description
       border-left none !important
@@ -128,7 +136,7 @@
     background-repeat no-repeat
   
   body .content-area-web
-    padding-top 102px
+    padding-top 158px
   .one-rows-nav .first-row .nav-item
     margin 0 8px
   .one-rows-nav .navbar-brand .logo
@@ -251,8 +259,8 @@
   /* SLIDER */
   .slider-box
     .slider-img
-      height 100px
-      background-size 100%
+      height 180px
+      background-sizes 100%
     .owl-nav
       display none
   .slider-small
