--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2004,6 +2004,15 @@ md-input-container > md-select {
   }
 }
 @media only screen and (max-width: 767px) {
+  #home .slider-box .card {
+    margin-bottom: 0;
+  }
+  #home .slider-box .card .card-img-top {
+    height: 170px;
+  }
+  .slider-box .no-pd-l {
+    padding: 15px !important;
+  }
   .temp-product-detail .article-description {
     border-left: none !important;
   }
@@ -2049,7 +2058,7 @@ md-input-container > md-select {
     background-repeat: no-repeat;
   }
   body .content-area-web {
-    padding-top: 102px;
+    padding-top: 158px;
   }
   .one-rows-nav .first-row .nav-item {
     margin: 0 8px;
@@ -2200,8 +2209,8 @@ md-input-container > md-select {
     display: inline !important;
   }
   .slider-box .slider-img {
-    height: 100px;
-    background-size: 100%;
+    height: 180px;
+    background-sizes: 100%;
   }
   .slider-box .owl-nav {
     display: none;
