ajuste de estilo

--- a/app/css/layout/layout.styl
+++ b/app/css/layout/layout.styl
@@ -232,6 +232,11 @@ md-input-container
     padding 0 10px 0 0
   .interest-you
     padding-bottom 60px
+    .box-simple 
+      .box-container 
+        position relative
+        i.fa.fa-truck.text-success.ng-scope
+          bottom 37%
     .title-middle-line
       padding 15px 15px 30px
       h4 
@@ -239,7 +244,6 @@ md-input-container
     .owl-carousel .owl-item 
       text-align center
       img
-        width auto !important
         margin 0 auto
   #product-detail 
     background-color white
