--- a/app/css/layout/responsive.styl
+++ b/app/css/layout/responsive.styl
@@ -89,6 +89,8 @@
 /* Mobile Layout: 320px. */
 
 @media only screen and (max-width: 767px)
+  .temp-product-detail .interest-you .box-simple .box-container i.fa.fa-truck.text-success.ng-scope, .md-dialog-content .interest-you .box-simple .box-container i.fa.fa-truck.text-success.ng-scope
+    bottom 92%
   #home .slider-box 
     .card
       margin-bottom 0
