ajuste de estilo gral

--- a/app/css/layout/layout.styl
+++ b/app/css/layout/layout.styl
@@ -154,9 +154,11 @@ md-input-container
 
   /* SECTION FOUR */
   .section-four
-    padding: 20px 0 40px !important
+    padding: 80px 0 !important
     .list-group
-      margin-bottom 15px
+      margin-bottom 8px
+    .card
+      margin-bottom 8px  
 
   /* SECTION FIVE */
   .section-five
