--- a/app/css/layout/responsive.styl
+++ b/app/css/layout/responsive.styl
@@ -99,6 +99,8 @@
   .slider-box
     .no-pd-l 
       padding 15px !important
+  .section-four .col-sm-3
+    padding 5px
   .temp-product-detail 
     .article-description
       border-left none !important
