--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -1,54 +1,25 @@
 <div class="temp-search">
     <section class="content-area">
         <div class="container">
-            <div class="title-middle-line">
-                <div class="text-left">
-                    <h3 class="text-uppercase">Resultados de la busqueda: {{ Search.searchTerm }}</h3>
+            <div class="col-md-12">
+                <div class="title-middle-line">
+                    <div class="text-left">
+                        <h3 class="text-uppercase">Resultados de la busqueda: {{ Search.searchTerm }}</h3>
+                    </div>
                 </div>
             </div>
-            <div class="container" id="top">
-                <div class="row">
-                    <div class="col-sm-12" ng-controller="AccessCtrl as Access">
-                        <div class="container" ng-controller="ShoppingCtrl as Shop">
-                            <div class="row">
-                                <div class="col-sm-4" ng-repeat="item in Search.listSearch">
-                                    <div class="box-simple" ng-if="!Search.isPost">
-                                        <a ui-sref="Search-detail({slug:item.slug})" title="Ver detalles del producto">
-                                            <div class="box-header">
-                                                <div class="box-bg-img"
-                                                     style="background-image: url('{{item.featuredImage.url ? item.featuredImage.url : initConfig.img_default}}')"></div>
-                                            </div>
-                                            <div class="box-container">
-                                                <div class="row align-items-center">
-                                                    <div class="col-sm-8">
-                                                        <p>{{ item.name }}</p>
-                                                    </div>
-                                                    <div class="col-sm-4">
-                                                        <p>{{ item.price | currency }}</p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </a>
-                                        <div class="box-footer">
-                                            <div class="row"> 
-                                                <div class="col-sm-12">
-                                                    <a ui-sref="product-detail({slug:item.slug})" class="btn btn-block btn-white">Comprar</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-    
-                                    <div class="box-prod" ng-if="Search.isPost">
-                                        <a ui-sref="post_detail({slug:item.slug})">
-                                            <div class="bg-prod"
-                                                 style="background-image: url('{{item.featuredImage.url ? item.featuredImage.url : initConfig.img_default }}')"></div>
-                                            <h3 class="prod-descrip">{{item.title}}</h3>
-                                        </a>
-                                        <a ui-sref="post_detail({slug: item.slug})" class="btn btn-primary">Ver
-                                            más</a>
-                                    </div>
-                                </div>
-                            </div>
+            <div class="container" ng-controller="AccessCtrl as Access">
+                <div class="row" ng-controller="ShoppingCtrl as Shop">
+                    <div class="col-sm-3" ng-repeat="product in Search.listSearch">
+                        <ng-include src="'/templates/partials/box-product.html'"></ng-include>
+                        <div class="box-prod" ng-if="Search.isPost">
+                            <a ui-sref="post_detail({slug:item.slug})">
+                                <div class="bg-prod"
+                                        style="background-image: url('{{item.featuredImage.url ? item.featuredImage.url : initConfig.img_default }}')"></div>
+                                <h3 class="prod-descrip">{{item.title}}</h3>
+                            </a>
+                            <a ui-sref="post_detail({slug: item.slug})" class="btn btn-primary">Ver
+                                más</a>
                         </div>
                     </div>
                 </div>
@@ -56,19 +27,19 @@
                 <div class="ng-table-pager">
                     <ul ng-if="Search.pager.pages.length" class="pagination">
                         <li ng-class="{disabled:Search.pager.currentPage === 1}">
-                            <a ng-click="Search.setPage(1)">Primera</a>
+                            <a ng-click="Search.setPage(1)"><i class="fa fa-angle-double-left"></i></a>
                         </li>
                         <li ng-class="{disabled:Search.pager.currentPage === 1}">
-                            <a ng-click="Search.setPage(Search.pager.currentPage - 1)">Anterior</a>
+                            <a ng-click="Search.setPage(Search.pager.currentPage - 1)"><i class="fa fa-angle-left"></i></a>
                         </li>
                         <li ng-repeat="page in Search.pager.pages" ng-class="{active:Search.pager.currentPage === page}">
                             <a ng-click="Search.setPage(page)">{{page}}</a>
                         </li>
                         <li ng-class="{disabled:Search.pager.currentPage === Search.pager.totalPages}">
-                            <a ng-click="Search.setPage(Search.pager.currentPage + 1)">Siguiente</a>
+                            <a ng-click="Search.setPage(Search.pager.currentPage + 1)"><i class="fa fa-angle-right"></i></a>
                         </li>
                         <li ng-class="{disabled:Search.pager.currentPage === Search.pager.totalPages}">
-                            <a ng-click="Search.setPage(Search.pager.totalPages)">Última</a>
+                            <a ng-click="Search.setPage(Search.pager.totalPages)"><i class="fa fa-angle-double-right"></i></a>
                         </li>
                     </ul>
                 </div>
