ajustes en el sidebar

--- a/app/css/core/components.styl
+++ b/app/css/core/components.styl
@@ -531,7 +531,7 @@
   color #555
   float right
 .box-widget
-  widget(white, 2px, 15px, 1px solid #eee, none)
+  widget(white, 2px, 15px 0, 1px solid #eee, none)
   height 100%
   .dividerw
     border-color #ddd
