--- a/app/css/main.css
+++ b/app/css/main.css
@@ -875,7 +875,7 @@ audio:not([controls]),
 .box-widget {
   background-color: #fff;
   border-radius: 2px;
-  padding: 15px;
+  padding: 15px 0;
   border: 1px solid #eee;
   box-shadow: none;
   height: 100%;
